--- a/index.css
+++ b/index.css
@@ -7,10 +7,28 @@ body{
 }
 
 .container{
+ border-radius: 10px;
+ background-color:#616161;
  display: flex;
  flex-direction: column;
  position: absolute;
- top: 50vh;
- left: 50vw;
+ top: 35vh;
+ left: 45vw;
  align-items: center;
+}
+
+.input{
+ border: none;
+ border-radius: 5px;
+ margin: 5px 0px;
+ padding: 5px 0 30px 0;
+ font-size: 20px;
+}
+
+.button{
+ background-color: #616161;
+ border: none;
+ padding: 15px;
+ margin: 5px;
+ cursor: pointer;
 }
